Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2176

Finding usages of member function has some wrong positives

XMLWordPrintable

    • c5d48034bb3615dd399929235344e00f70527168

      While it was convenient in this particular case, it is still wrong.

      The text cursor was on the "path" member function.

        1. mapdocumentactionhandler.h
          3 kB
          Thorbjørn Lindeijer (closed Nokia identity)
        2. wrong-same-symbol-highlight.png
          79 kB
          Thorbjørn Lindeijer (closed Nokia identity)
        3. qualified-function.png
          31 kB
          Thorbjørn Lindeijer (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            Votes:
            4 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes